syntax = "proto3";
package identra.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/poly-workshop/identra/gen/proto/identra/v1;identra_v1_pb";

// TokenPair contains both access and refresh tokens following JWKS standards
message TokenPair {
  // Short-lived access token for API authentication (typically 15 minutes)
  string access_token = 1;
  // Access token expiration time
  google.protobuf.Timestamp access_token_expires_at = 2;
  // Long-lived refresh token for obtaining new access tokens (typically 7 days)
  string refresh_token = 3;
  // Refresh token expiration time
  google.protobuf.Timestamp refresh_token_expires_at = 4;
  // Token type, typically "Bearer"
  string token_type = 5;
}

service IdentraService {
  // GetJWKS returns the JSON Web Key Set for verifying tokens
  rpc GetJWKS(GetJWKSRequest) returns (GetJWKSResponse) {
    option (google.api.http) = {get: "/.well-known/jwks.json"};
  }
  rpc GetOAuthAuthorizationURL(GetOAuthAuthorizationURLRequest) returns (GetOAuthAuthorizationURLResponse) {
    option (google.api.http) = {get: "/v1/oauth/url"};
  }
  rpc LoginByOAuth(LoginByOAuthRequest) returns (LoginByOAuthResponse) {
    option (google.api.http) = {
      post: "/v1/oauth/login"
      body: "*"
    };
  }
  rpc LoginByPassword(LoginByPasswordRequest) returns (LoginByPasswordResponse) {
    option (google.api.http) = {
      post: "/v1/password/login"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/token/refresh"
      body: "*"
    };
  }
}

// JSON Web Key represents a single key in the JWKS
message JSONWebKey {
  // Key type (e.g., "RSA", "EC")
  string kty = 1;
  // Algorithm (e.g., "RS256", "ES256")
  string alg = 2;
  // Key usage (e.g., "sig" for signature)
  string use = 3;
  // Key ID
  string kid = 4;
  // RSA modulus (Base64URL encoded, for RSA keys)
  optional string n = 5;
  // RSA exponent (Base64URL encoded, for RSA keys)
  optional string e = 6;
  // EC curve name (for EC keys)
  optional string crv = 7;
  // EC x coordinate (Base64URL encoded, for EC keys)
  optional string x = 8;
  // EC y coordinate (Base64URL encoded, for EC keys)
  optional string y = 9;
}

message GetJWKSRequest {}
message GetJWKSResponse {
  // List of JSON Web Keys
  repeated JSONWebKey keys = 1;
}

message GetOAuthAuthorizationURLRequest {
  string provider = 1;
  optional string redirect_url = 2;
}
message GetOAuthAuthorizationURLResponse {
  string url = 1;
  string state = 2;
}

message LoginByOAuthRequest {
  string code = 1;
  string state = 2;
}
message LoginByOAuthResponse {
  TokenPair token = 1;
}

message LoginByPasswordRequest {
  string email = 1;
  string password = 2;
}
message LoginByPasswordResponse {
  TokenPair token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}
message RefreshTokenResponse {
  TokenPair token = 1;
}
