package service

import (
	"context"
	"crypto/rand"
	"encoding/hex"
	"encoding/json"
	"fmt"
	"log/slog"
	"net"
	"strings"
	"time"

	identra_v1_pb "github.com/poly-workshop/identra/gen/proto/identra/v1"
	"github.com/poly-workshop/identra/internal/configs"
	"github.com/poly-workshop/identra/internal/model"
	providerPkg "github.com/poly-workshop/identra/internal/provider"
	"github.com/poly-workshop/identra/internal/repository"
	"github.com/poly-workshop/identra/internal/utils"
	"github.com/redis/go-redis/v9"
	"golang.org/x/oauth2"
	"golang.org/x/oauth2/github"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/metadata"
	"google.golang.org/grpc/peer"
	"google.golang.org/grpc/status"
	"gorm.io/gorm"
)

// OAuthStateData represents OAuth state information
type OAuthStateData struct {
	Provider    string    `json:"provider"`
	RedirectURL string    `json:"redirect_url,omitempty"`
	UserAgent   string    `json:"user_agent,omitempty"`
	IPAddress   string    `json:"ip_address,omitempty"`
	CreatedAt   time.Time `json:"created_at"`
	ExpiresAt   time.Time `json:"expires_at"`
}

type AuthService interface {
	// gRPC service methods
	GetJWKS(ctx context.Context, req *identra_v1_pb.GetJWKSRequest) (*identra_v1_pb.GetJWKSResponse, error)
	GetOAuthAuthorizationURL(ctx context.Context, req *identra_v1_pb.GetOAuthAuthorizationURLRequest) (*identra_v1_pb.GetOAuthAuthorizationURLResponse, error)
	LoginByOAuth(ctx context.Context, req *identra_v1_pb.LoginByOAuthRequest) (*identra_v1_pb.LoginByOAuthResponse, error)
	LoginByPassword(ctx context.Context, req *identra_v1_pb.LoginByPasswordRequest) (*identra_v1_pb.LoginByPasswordResponse, error)
	RefreshToken(ctx context.Context, req *identra_v1_pb.RefreshTokenRequest) (*identra_v1_pb.RefreshTokenResponse, error)
}

type authService struct {
	db           *gorm.DB
	rdb          redis.UniversalClient
	userRepo     repository.UserRepository
	credRepo     repository.ClientCredentialRepository
	config       configs.Config
	keyManager   *utils.KeyManager
	oauthConfigs map[string]*oauth2.Config
	identra_v1_pb.UnimplementedIdentraServiceServer
}

func NewAuthService(
	db *gorm.DB,
	rdb redis.UniversalClient,
	credRepo repository.ClientCredentialRepository,
) identra_v1_pb.IdentraServiceServer {
	config := configs.Load()

	// Initialize Key Manager for JWT signing
	keyManager := utils.GetKeyManager()
	if config.Auth.RSAPrivateKey != "" {
		if err := keyManager.InitializeFromPEM(config.Auth.RSAPrivateKey); err != nil {
			slog.Error("failed to initialize key manager from PEM", "error", err)
			// Generate a new key pair as fallback
			if err := keyManager.GenerateKeyPair(); err != nil {
				slog.Error("failed to generate key pair", "error", err)
			}
		}
	} else {
		// Generate a new key pair if no private key is configured
		slog.Warn("no RSA private key configured, generating a new key pair")
		if err := keyManager.GenerateKeyPair(); err != nil {
			slog.Error("failed to generate key pair", "error", err)
		}
	}

	// Initialize OAuth configurations
	oauthConfigs := make(map[string]*oauth2.Config)
	oauthConfigs["github"] = &oauth2.Config{
		ClientID:     config.Auth.GithubClientID,
		ClientSecret: config.Auth.GithubClientSecret,
		Scopes:       []string{"user:email"},
		Endpoint:     github.Endpoint,
		RedirectURL:  config.Auth.GithubRedirectURL,
	}

	return &authService{
		db:           db,
		rdb:          rdb,
		userRepo:     repository.NewUserRepository(db),
		credRepo:     credRepo,
		config:       config,
		keyManager:   keyManager,
		oauthConfigs: oauthConfigs,
	}
}

// OAuth state management methods
func (s *authService) generateState(
	ctx context.Context,
	provider, redirectURL, userAgent, ipAddress string,
) (string, error) {
	// Generate random state
	stateBytes := make([]byte, 32)
	if _, err := rand.Read(stateBytes); err != nil {
		return "", status.Errorf(codes.Internal, "failed to generate state: %v", err)
	}
	state := hex.EncodeToString(stateBytes)

	// Create state data
	now := time.Now()
	stateData := OAuthStateData{
		Provider:    provider,
		RedirectURL: redirectURL,
		UserAgent:   userAgent,
		IPAddress:   ipAddress,
		CreatedAt:   now,
		ExpiresAt:   now.Add(s.config.Auth.OAuthStateExpirationDuration),
	}

	// Store state data in Redis
	dataBytes, err := json.Marshal(stateData)
	if err != nil {
		return "", status.Errorf(codes.Internal, "failed to marshal state data: %v", err)
	}

	stateKey := fmt.Sprintf("oauth_state:%s", state)
	err = s.rdb.Set(ctx, stateKey, string(dataBytes), s.config.Auth.OAuthStateExpirationDuration).Err()
	if err != nil {
		return "", status.Errorf(codes.Internal, "failed to store state: %v", err)
	}

	return state, nil
}

func (s *authService) validateState(
	ctx context.Context,
	state, userAgent, ipAddress string,
) (*OAuthStateData, error) {
	stateKey := fmt.Sprintf("oauth_state:%s", state)
	dataStr, err := s.rdb.Get(ctx, stateKey).Result()
	if err != nil {
		return nil, status.Errorf(codes.InvalidArgument, "invalid or expired state")
	}

	var stateData OAuthStateData
	if err := json.Unmarshal([]byte(dataStr), &stateData); err != nil {
		return nil, status.Errorf(codes.Internal, "failed to unmarshal state data: %v", err)
	}

	// Validate expiration
	if time.Now().After(stateData.ExpiresAt) {
		// Clean up expired state
		err = s.deleteState(ctx, state)
		if err != nil {
			slog.ErrorContext(ctx, "failed to delete expired oauth state",
				"error", err,
				"state_prefix", state[:min(16, len(state))],
			)
		}
		return nil, status.Errorf(codes.InvalidArgument, "state has expired")
	}

	// Validate user agent if provided during creation (optional but recommended)
	if stateData.UserAgent != "" && userAgent != "" && stateData.UserAgent != userAgent {
		return nil, status.Errorf(
			codes.InvalidArgument,
			"user agent mismatch - possible session hijacking",
		)
	}

	// Validate IP address if provided during creation (optional but recommended)
	if stateData.IPAddress != "" && ipAddress != "" && stateData.IPAddress != ipAddress {
		return nil, status.Errorf(
			codes.InvalidArgument,
			"IP address mismatch - possible session hijacking",
		)
	}

	return &stateData, nil
}

func (s *authService) deleteState(ctx context.Context, state string) error {
	stateKey := fmt.Sprintf("oauth_state:%s", state)
	return s.rdb.Del(ctx, stateKey).Err()
}

// GetJWKS returns the JSON Web Key Set for verifying tokens
func (s *authService) GetJWKS(
	ctx context.Context,
	req *identra_v1_pb.GetJWKSRequest,
) (*identra_v1_pb.GetJWKSResponse, error) {
	slog.InfoContext(ctx, "jwks request received")

	if !s.keyManager.IsInitialized() {
		slog.WarnContext(ctx, "key manager not initialized, returning empty JWKS")
		return &identra_v1_pb.GetJWKSResponse{
			Keys: []*identra_v1_pb.JSONWebKey{},
		}, nil
	}

	return s.keyManager.GetJWKS(), nil
}

// GetOAuthAuthorizationURL generates OAuth authorization URL with embedded CSRF protection
func (s *authService) GetOAuthAuthorizationURL(
	ctx context.Context,
	req *identra_v1_pb.GetOAuthAuthorizationURLRequest,
) (*identra_v1_pb.GetOAuthAuthorizationURLResponse, error) {
	slog.InfoContext(ctx, "oauth authorization url request started",
		"provider", req.Provider,
		"ip_address", s.extractIPAddress(ctx),
		"user_agent", s.extractUserAgent(ctx))

	if req.Provider == "" {
		slog.WarnContext(ctx, "oauth authorization url request failed", "error", "provider is required")
		return nil, status.Errorf(codes.InvalidArgument, "provider is required")
	}
	oauthConfig, exists := s.oauthConfigs[req.Provider]
	if !exists {
		slog.WarnContext(
			ctx,
			"oauth authorization url request failed",
			"error",
			"unsupported provider",
			"provider",
			req.Provider,
		)
		return nil, status.Errorf(codes.InvalidArgument, "unsupported provider: %s", req.Provider)
	}

	// Extract client information for additional security
	userAgent := s.extractUserAgent(ctx)
	ipAddress := s.extractIPAddress(ctx)

	// Use custom redirect URL if provided, otherwise use default from config
	redirectURL := req.GetRedirectUrl()
	if redirectURL == "" {
		redirectURL = oauthConfig.RedirectURL
	}

	// Create a copy of the OAuth config with the custom redirect URL
	customOauthConfig := *oauthConfig
	customOauthConfig.RedirectURL = redirectURL

	// Generate state with embedded CSRF protection, including the redirect URL
	state, err := s.generateState(ctx, req.Provider, redirectURL, userAgent, ipAddress)
	if err != nil {
		slog.ErrorContext(
			ctx,
			"oauth state generation failed",
			"error",
			err,
			"provider",
			req.Provider,
		)
		return nil, err
	}

	url := customOauthConfig.AuthCodeURL(state, oauth2.AccessTypeOffline)

	slog.InfoContext(ctx, "oauth authorization url generated successfully",
		"provider", req.Provider,
		"redirect_url", redirectURL,
		"state_id", state[:16], // Log partial state for debugging
		"ip_address", ipAddress)

	return &identra_v1_pb.GetOAuthAuthorizationURLResponse{
		Url:   url,
		State: state, // Return the state containing all security information
	}, nil
}

// LoginByOAuth handles OAuth login flow with CSRF protection
func (s *authService) LoginByOAuth(
	ctx context.Context,
	req *identra_v1_pb.LoginByOAuthRequest,
) (*identra_v1_pb.LoginByOAuthResponse, error) {
	ipAddress := s.extractIPAddress(ctx)
	userAgent := s.extractUserAgent(ctx)

	slog.InfoContext(ctx, "oauth login attempt started",
		"ip_address", ipAddress,
		"user_agent", userAgent)

	if req.Code == "" || req.State == "" {
		slog.WarnContext(
			ctx,
			"oauth login failed",
			"error",
			"code and state are required",
			"has_code",
			req.Code != "",
			"has_state",
			req.State != "",
		)
		return nil, status.Errorf(codes.InvalidArgument, "code and state are required")
	}

	stateData, err := s.validateState(ctx, req.State, userAgent, ipAddress)
	if err != nil {
		slog.WarnContext(
			ctx,
			"oauth state validation failed",
			"error",
			err,
			"state_prefix",
			req.State[:min(16, len(req.State))],
			"ip_address",
			ipAddress,
		)
		return nil, err
	}

	slog.InfoContext(
		ctx,
		"oauth state validated successfully",
		"provider",
		stateData.Provider,
		"redirect_url",
		stateData.RedirectURL,
	)

	// Delete used state
	err = s.deleteState(ctx, req.State)
	if err != nil {
		slog.ErrorContext(
			ctx,
			"failed to delete used oauth state",
			"error",
			err,
			"state_prefix",
			req.State[:min(16, len(req.State))],
		)
		return nil, status.Errorf(codes.Internal, "failed to delete used state: %v", err)
	}

	oauthConfig, exists := s.oauthConfigs[stateData.Provider]
	if !exists {
		slog.ErrorContext(ctx, "unsupported oauth provider", "provider", stateData.Provider)
		return nil, status.Errorf(
			codes.InvalidArgument,
			"unsupported provider: %s",
			stateData.Provider,
		)
	}

	// Use the redirect URL from state if available, otherwise use default from config
	redirectURL := stateData.RedirectURL
	if redirectURL == "" {
		redirectURL = oauthConfig.RedirectURL
	}

	// Create a copy of the OAuth config with the redirect URL from state
	customOauthConfig := *oauthConfig
	customOauthConfig.RedirectURL = redirectURL

	// Exchange code for token
	token, err := customOauthConfig.Exchange(ctx, req.Code)
	if err != nil {
		slog.ErrorContext(
			ctx,
			"oauth token exchange failed",
			"error",
			err,
			"provider",
			stateData.Provider,
		)
		return nil, status.Errorf(codes.Internal, "failed to exchange code for token: %v", err)
	}

	slog.DebugContext(ctx, "oauth token exchange successful", "provider", stateData.Provider)

	// Get user info from provider
	userProvider, err := providerPkg.GetUserProvider(stateData.Provider)
	if err != nil {
		slog.ErrorContext(
			ctx,
			"failed to get user provider",
			"error",
			err,
			"provider",
			stateData.Provider,
		)
		return nil, status.Errorf(codes.Internal, "failed to get user provider: %v", err)
	}

	userInfo, err := userProvider.GetUserInfo(ctx, token.AccessToken)
	if err != nil {
		slog.ErrorContext(
			ctx,
			"failed to get user info from provider",
			"error",
			err,
			"provider",
			stateData.Provider,
		)
		return nil, status.Errorf(codes.Internal, "failed to get user info: %v", err)
	}

	slog.InfoContext(
		ctx,
		"user info retrieved from provider",
		"provider",
		stateData.Provider,
		"user_id",
		userInfo.ID,
		"email",
		userInfo.Email,
	)

	// Find or create user
	var user *model.UserModel
	var isNewUser bool
	if stateData.Provider == "github" {
		user, err = s.userRepo.GetByGithubID(ctx, userInfo.ID)
		if err != nil && err != gorm.ErrRecordNotFound {
			slog.ErrorContext(
				ctx,
				"failed to query user by github id",
				"error",
				err,
				"github_id",
				userInfo.ID,
			)
			return nil, status.Errorf(codes.Internal, "failed to query user: %v", err)
		}

		if user == nil {
			isNewUser = true
			// Create new user
			now := time.Now()
			user = &model.UserModel{
				Email:       userInfo.Email,
				GithubID:    &userInfo.ID,
				LastLoginAt: &now,
			}

			if err := s.userRepo.Create(ctx, user); err != nil {
				slog.ErrorContext(
					ctx,
					"failed to create new user",
					"error",
					err,
					"email",
					userInfo.Email,
					"github_id",
					userInfo.ID,
				)
				return nil, status.Errorf(codes.Internal, "failed to create user: %v", err)
			}
			slog.InfoContext(
				ctx,
				"new user created successfully",
				"user_id",
				user.ID,
				"email",
				user.Email,
				"provider",
				stateData.Provider,
			)
		} else {
			// Update last login
			now := time.Now()
			user.LastLoginAt = &now
			if err := s.userRepo.Update(ctx, user); err != nil {
				slog.ErrorContext(ctx, "failed to update user last login", "error", err, "user_id", user.ID)
				return nil, status.Errorf(codes.Internal, "failed to update user: %v", err)
			}
			slog.InfoContext(ctx, "existing user login successful", "user_id", user.ID, "email", user.Email, "provider", stateData.Provider)
		}
	}

	// Generate token pair (access + refresh tokens)
	tokenConfig := utils.TokenConfig{
		PrivateKey:             s.keyManager.GetPrivateKey(),
		PublicKey:              s.keyManager.GetPublicKey(),
		KeyID:                  s.keyManager.GetKeyID(),
		Issuer:                 s.config.Auth.TokenIssuer,
		AccessTokenExpiration:  s.config.Auth.AccessTokenExpirationDuration,
		RefreshTokenExpiration: s.config.Auth.RefreshTokenExpirationDuration,
	}
	tokenPair, err := utils.NewTokenPair(user.ID, tokenConfig)
	if err != nil {
		slog.ErrorContext(ctx, "failed to generate token pair", "error", err, "user_id", user.ID)
		return nil, status.Errorf(codes.Internal, "failed to generate token: %v", err)
	}

	slog.InfoContext(ctx, "oauth login completed successfully",
		"user_id", user.ID,
		"provider", stateData.Provider,
		"is_new_user", isNewUser,
		"ip_address", ipAddress,
		"access_token_expires_at", tokenPair.AccessTokenExpiresAt.AsTime(),
		"refresh_token_expires_at", tokenPair.RefreshTokenExpiresAt.AsTime())

	return &identra_v1_pb.LoginByOAuthResponse{
		Token: tokenPair,
	}, nil
}

// LoginByPassword handles password-based login
func (s *authService) LoginByPassword(
	ctx context.Context,
	req *identra_v1_pb.LoginByPasswordRequest,
) (*identra_v1_pb.LoginByPasswordResponse, error) {
	ipAddress := s.extractIPAddress(ctx)
	userAgent := s.extractUserAgent(ctx)

	slog.InfoContext(ctx, "password login attempt started",
		"email", req.Email,
		"ip_address", ipAddress,
		"user_agent", userAgent)

	if req.Email == "" || req.Password == "" {
		slog.WarnContext(
			ctx,
			"password login failed",
			"error",
			"email and password are required",
			"has_email",
			req.Email != "",
			"has_password",
			req.Password != "",
		)
		return nil, status.Errorf(codes.InvalidArgument, "email and password are required")
	}

	// Get user by email
	user, err := s.userRepo.GetByEmail(ctx, req.Email)
	if err != nil {
		if err == gorm.ErrRecordNotFound {
			slog.WarnContext(
				ctx,
				"password login failed",
				"error",
				"user not found",
				"email",
				req.Email,
				"ip_address",
				ipAddress,
			)
			return nil, status.Errorf(codes.NotFound, "invalid credentials")
		}
		slog.ErrorContext(
			ctx,
			"failed to query user for password login",
			"error",
			err,
			"email",
			req.Email,
		)
		return nil, status.Errorf(codes.Internal, "failed to query user: %v", err)
	}

	// Check if user has a password set
	if user.HashedPassword == nil {
		slog.WarnContext(
			ctx,
			"password login attempt for oauth-only account",
			"user_id",
			user.ID,
			"email",
			req.Email,
			"ip_address",
			ipAddress,
		)
		return nil, status.Errorf(
			codes.FailedPrecondition,
			"password login not available for this account",
		)
	}

	// Verify password
	valid, err := utils.VerifyPassword(req.Password, *user.HashedPassword)
	if err != nil {
		slog.ErrorContext(
			ctx,
			"password verification error",
			"error",
			err,
			"user_id",
			user.ID,
			"email",
			req.Email,
		)
		return nil, status.Errorf(codes.Internal, "failed to verify password: %v", err)
	}
	if !valid {
		slog.WarnContext(
			ctx,
			"password login failed",
			"error",
			"invalid password",
			"user_id",
			user.ID,
			"email",
			req.Email,
			"ip_address",
			ipAddress,
		)
		return nil, status.Errorf(codes.Unauthenticated, "invalid credentials")
	}

	// Update last login
	now := time.Now()
	user.LastLoginAt = &now
	if err := s.userRepo.Update(ctx, user); err != nil {
		slog.ErrorContext(ctx, "failed to update user last login", "error", err, "user_id", user.ID)
		return nil, status.Errorf(codes.Internal, "failed to update user: %v", err)
	}

	// Generate token pair (access + refresh tokens)
	tokenConfig := utils.TokenConfig{
		PrivateKey:             s.keyManager.GetPrivateKey(),
		PublicKey:              s.keyManager.GetPublicKey(),
		KeyID:                  s.keyManager.GetKeyID(),
		Issuer:                 s.config.Auth.TokenIssuer,
		AccessTokenExpiration:  s.config.Auth.AccessTokenExpirationDuration,
		RefreshTokenExpiration: s.config.Auth.RefreshTokenExpirationDuration,
	}
	tokenPair, err := utils.NewTokenPair(user.ID, tokenConfig)
	if err != nil {
		slog.ErrorContext(ctx, "failed to generate token pair", "error", err, "user_id", user.ID)
		return nil, status.Errorf(codes.Internal, "failed to generate token: %v", err)
	}

	slog.InfoContext(ctx, "password login completed successfully",
		"user_id", user.ID,
		"email", req.Email,
		"ip_address", ipAddress,
		"access_token_expires_at", tokenPair.AccessTokenExpiresAt.AsTime(),
		"refresh_token_expires_at", tokenPair.RefreshTokenExpiresAt.AsTime())

	return &identra_v1_pb.LoginByPasswordResponse{
		Token: tokenPair,
	}, nil
}

// RefreshToken handles token refresh using a valid refresh token
func (s *authService) RefreshToken(
	ctx context.Context,
	req *identra_v1_pb.RefreshTokenRequest,
) (*identra_v1_pb.RefreshTokenResponse, error) {
	ipAddress := s.extractIPAddress(ctx)
	userAgent := s.extractUserAgent(ctx)

	slog.InfoContext(ctx, "token refresh attempt started",
		"ip_address", ipAddress,
		"user_agent", userAgent)

	if req.RefreshToken == "" {
		slog.WarnContext(ctx, "token refresh failed", "error", "refresh_token is required")
		return nil, status.Errorf(codes.InvalidArgument, "refresh_token is required")
	}

	// Generate new token pair using refresh token
	tokenConfig := utils.TokenConfig{
		PrivateKey:             s.keyManager.GetPrivateKey(),
		PublicKey:              s.keyManager.GetPublicKey(),
		KeyID:                  s.keyManager.GetKeyID(),
		Issuer:                 s.config.Auth.TokenIssuer,
		AccessTokenExpiration:  s.config.Auth.AccessTokenExpirationDuration,
		RefreshTokenExpiration: s.config.Auth.RefreshTokenExpirationDuration,
	}
	tokenPair, err := utils.RefreshTokenPair(req.RefreshToken, tokenConfig)
	if err != nil {
		slog.WarnContext(ctx, "token refresh failed",
			"error", err,
			"ip_address", ipAddress)
		return nil, status.Errorf(codes.Unauthenticated, "invalid or expired refresh token")
	}

	// Get user ID from the new token for logging
	claims, _ := utils.ValidateAccessToken(tokenPair.AccessToken, s.keyManager.GetPublicKey())
	userID := ""
	if claims != nil {
		userID = claims.UserID
	}

	slog.InfoContext(ctx, "token refresh completed successfully",
		"user_id", userID,
		"ip_address", ipAddress,
		"access_token_expires_at", tokenPair.AccessTokenExpiresAt.AsTime(),
		"refresh_token_expires_at", tokenPair.RefreshTokenExpiresAt.AsTime())

	return &identra_v1_pb.RefreshTokenResponse{
		Token: tokenPair,
	}, nil
}

// extractUserAgent extracts user agent from gRPC metadata
func (s *authService) extractUserAgent(ctx context.Context) string {
	if md, ok := metadata.FromIncomingContext(ctx); ok {
		userAgents := md.Get("user-agent")
		if len(userAgents) > 0 {
			return userAgents[0]
		}
	}
	return ""
}

// extractIPAddress extracts IP address from gRPC peer info
func (s *authService) extractIPAddress(ctx context.Context) string {
	if p, ok := peer.FromContext(ctx); ok {
		if addr := p.Addr; addr != nil {
			// Handle different address types
			switch addr := addr.(type) {
			case *net.TCPAddr:
				return addr.IP.String()
			case *net.UDPAddr:
				return addr.IP.String()
			default:
				// Try to parse the string representation
				addrStr := addr.String()
				if host, _, err := net.SplitHostPort(addrStr); err == nil {
					return host
				}
				// Check for X-Forwarded-For header in metadata
				if md, ok := metadata.FromIncomingContext(ctx); ok {
					xForwardedFor := md.Get("x-forwarded-for")
					if len(xForwardedFor) > 0 {
						// Get the first IP from the comma-separated list
						ips := strings.Split(xForwardedFor[0], ",")
						if len(ips) > 0 {
							return strings.TrimSpace(ips[0])
						}
					}

					xRealIP := md.Get("x-real-ip")
					if len(xRealIP) > 0 {
						return xRealIP[0]
					}
				}
				return addrStr
			}
		}
	}
	return ""
}
